--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,22 +15,17 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '6.0.x'
+    - name: Create webapp
+      run: dotnet new webapp -n github4women
 
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore **/*.csproj
 
     - name: Build the application
-      run: dotnet build --configuration Release --no-restore
-
-    - name: Run tests
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build **/*.csproj --no-restore
 
     - name: Custom script
       run: |
         echo "Running custom script"
         # Add your custom commands here
-        dotnet run --project YourProjectName
+        dotnet run --project **/*.csproj
