--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Create webapp
-      run: dotnet new webapp -n github4women
+      run: dotnet new webapp -n github4women --force
 
     - name: Install dependencies
       run: dotnet restore **/*.csproj
